Add audit Log page

--- a/Pages/UserAdmin.razor
+++ b/Pages/UserAdmin.razor
@@ -163,10 +163,10 @@
 <h3>Roll Descriptions</h3>
 <ul>
     <li>Global Admin - Access to all areas</li>
-    <li>User Admin - Access to add rolls to users (Except Global Admin)</li>
-    <li>Skate Admin - Access to skate Admin Page - Ability to override skate values, also has access to skate reports</li>
-    <li>Sharpening - Ability to mark skates as sent to be sharpened and receive skates from sharpening</li>
-    <li>Report Viewer - Access to Skate Status and history page</li>
+    <li>User Admin - Access to add rolls to users</li>
+    <li>Skate Admin - Access to Check Out, Skate Admin, and Skate Status pages </li>
+    <li>Sharpening - Access to Sharpening Page</li>
+    <li>Report Viewer - Access to Skate Status and Audit Log pages (Read-only role)</li>
     <li>Rental Operator - Access check skates in and out</li>
 </ul>
 @code {
