--- a/Pages/CheckOut.razor
+++ b/Pages/CheckOut.razor
@@ -4,7 +4,8 @@
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@inject ApplicationDbContext Context   
+@implements IDisposable
+@inject IDbContextFactory<ApplicationDbContext> DbFactory
 @inject IMessageService MessageService
 @inject UserManager<ApplicationUser> UserManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -88,6 +89,7 @@
     private string? _search;
     private List<Property>? _properties;
     private ApplicationUser user;
+    private ApplicationDbContext? Context;
     protected override async Task OnInitializedAsync()
     {
         _busy = true;
@@ -95,6 +97,8 @@
 
         try
         {
+            Context = await DbFactory.CreateDbContextAsync();
+
             if (Context is not null)
             {
                 //Get all non-archived skates
@@ -102,17 +106,22 @@
                 //Get global properties
                 _properties = await Context.Properties.ToListAsync();
             }
+            
+            var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+            user = await UserManager.GetUserAsync(authState.User);
         }
         finally
         {
             _busy = false;
         }
 
-        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-        user = await UserManager.GetUserAsync(authState.User);
 
         await base.OnInitializedAsync();
         _hasLoaded = true;
+    }
+    public void Dispose()
+    {
+        Context?.Dispose();
     }
 
     protected async Task UpdateSkateStatus(Skate skate, SkateStatus newStatus)
