--- a/Pages/SkateAdmin.razor
+++ b/Pages/SkateAdmin.razor
@@ -4,7 +4,8 @@
 @using Microsoft.EntityFrameworkCore
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Identity
-@inject ApplicationDbContext Context
+@implements IDisposable
+@inject IDbContextFactory<ApplicationDbContext> DbFactory
 @inject UserManager<ApplicationUser> UserManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
@@ -114,10 +115,12 @@
     private bool _addSkateModalVisible;
     private string _newSkateName;
     private ApplicationUser user;
+    private ApplicationDbContext? Context;
 
     protected override async Task OnInitializedAsync() {
         _busy = true;
         _hasLoaded = false;
+        Context = await DbFactory.CreateDbContextAsync();
         if(Context is not null) {
             //Get all skates
             _skates = await Context.Skates.OrderBy(s=>s.IsArchived).ThenBy(s => s.Name).ToListAsync();
@@ -130,7 +133,10 @@
         _busy = false;
         _hasLoaded = true;
     }
-
+    public void Dispose()
+    {
+        Context?.Dispose();
+    }
     protected async Task UpdateSkateStatus(Skate skate, SkateStatus newStatus) {
         _busy = true;
         AuditLog audit = new AuditLog()
