--- a/Pages/UserAdmin.razor
+++ b/Pages/UserAdmin.razor
@@ -6,7 +6,8 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Identity.UI.Services
 @using System.Data.SqlTypes
-@inject ApplicationDbContext Context
+@implements IDisposable
+@inject IDbContextFactory<ApplicationDbContext> DbFactory
 @inject UserManager<ApplicationUser> UserManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject IMessageService MessageService
@@ -180,11 +181,13 @@
     private ApplicationUser selectedUser;
     private bool _showEditUserModal, _showUserAuditModal;
     private List<AuditLog> _userAuditLogs;
+    private ApplicationDbContext? Context;
 
     protected override async Task OnInitializedAsync()
     {
         _busy = true;
         _hasLoaded = false;
+        Context = await DbFactory.CreateDbContextAsync();
 
         if (Context is not null)
         {
@@ -208,7 +211,10 @@
         _busy = false;
         _hasLoaded = true;
     }
-
+    public void Dispose()
+    {
+        Context?.Dispose();
+    }
     protected async Task DeleteUser(ApplicationUser user)
     {
         _busy = true;
