Add github link

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -5,8 +5,13 @@
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+        <div class="bottom-row">
+            <div class="align-items-center text-center">
+                <span>Designed by Quinn Matthews</span>
+                <span>Checkout the code on <a href="https://github.com/QuinnMatthews/LRSIceRink">Github</a></span>
+            </div>
+        </div>
     </div>
-
     <main>
         <div class="top-row px-4 auth">
             <LoginDisplay />
