--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="audit">
+                <span class="oi oi-plus" aria-hidden="true"></span> Audit Log
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="skateadmin">
                 <span class="oi oi-plus" aria-hidden="true"></span> Skate Administration
             </NavLink>
