--- a/Pages/CheckOut.razor
+++ b/Pages/CheckOut.razor
@@ -105,10 +105,11 @@
                 _skates = await Context.Skates.Where(s=> !s.IsArchived).OrderBy(s=>s.Name).ToListAsync();
                 //Get global properties
                 _properties = await Context.Properties.ToListAsync();
+                //Get Logged in User
+                var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+                user = await Context.Users.Where(u => u.UserName == authState.User.Identity.Name).FirstAsync();
             }
             
-            var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-            user = await UserManager.GetUserAsync(authState.User);
         }
         finally
         {
