Fix Typos in Role Description
I was probably asleep while coding this

--- a/Pages/UserAdmin.razor
+++ b/Pages/UserAdmin.razor
@@ -161,10 +161,10 @@
         }
     }
 </LoadingIndicator>
-<h3>Roll Descriptions</h3>
+<h3>Role Descriptions</h3>
 <ul>
     <li>Global Admin - Access to all areas</li>
-    <li>User Admin - Access to add rolls to users</li>
+    <li>User Admin - Access to add roles to users</li>
     <li>Skate Admin - Access to Check Out, Skate Admin, and Skate Status pages </li>
     <li>Sharpening - Access to Sharpening Page</li>
     <li>Report Viewer - Access to Skate Status and Audit Log pages (Read-only role)</li>
